banner cmpt lgt

--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -303,7 +303,7 @@
                                 name: 'TECHX',
                                 description: 'Thank you for Placing an order ',
                                 image: 'https://static-00.iconduck.com/assets.00/bill-payment-icon-2048x2048-vpew78n5.png',
-                                handler: function(responseb) {
+                                handler: function(response) {
                                     window.location.href = '/razorpay/' + selects;
                                 },
                                 prefill: {
