--- a/ecomprj/templates/core/home.html
+++ b/ecomprj/templates/core/home.html
@@ -46,7 +46,7 @@
                         <!--Category Menu Start-->
                         <div class="category-menu category-menu-2">
                             <div class="category-heading">
-                                <h2 class="categories-toggle"><span>categories</span></h2>
+                                <h2 class="categories-toggle"class="header-bottom header-sticky d-none d-lg-block d-xl-block" style="background-color:rgb(0,174,191);"><span>categories</span></h2>
                             </div>
                             <div id="cate-toggle" class="category-menu-list">
                                 <ul>
