--- a/ecomprj/templates/adminside/header.html
+++ b/ecomprj/templates/adminside/header.html
@@ -27,6 +27,7 @@
 				<a href="index-2.html" class="logo">
 					 <span>TECHX</span>
 				</a>
+                <a class="dropdown-item" href="{% url 'adminside:dashboard_logout' %}">Logout</a>
 			</div>
 			<a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
             <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"><i class="fa fa-bars"></i></a>
@@ -112,10 +113,13 @@
                         <span class="user-img">
 							<img class="rounded-circle" src="{% static 'adminside/assets/img/user.jpg' %}" width="24" alt="Admin">
 							<span class="status online"></span>
-						</span> 
-						<span>Admin</span>
+						</span>
+                        <a class="dropdown-item" href="{% url 'adminside:dashboard_logout' %}">Logout</a> 
+						{% comment %} <span></span> {% endcomment %}
+                        
                     </a>
 					<div class="dropdown-menu">
+                        
 						<a class="dropdown-item" href="profile.html">My Profile</a>
 						<a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
 						<a class="dropdown-item" href="settings.html">Settings</a>
