--- a/ecomprj/templates/core/home.html
+++ b/ecomprj/templates/core/home.html
@@ -199,7 +199,7 @@
                                 <br>           
                             </div>
                             <div class="row li-main-content">
-                                {% for i in main_category|slice:":3" %}
+                                {% for i in default_main_category|slice:":3" %}
                                 <div class="col-lg-4 col-md-6">
                                     <div class="li-blog-single-item pb-15">
                                         <div class="li-blog-gallery-slider slick-dot-style">
