rewiew and rating

--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -1,3 +1,4 @@
+User
 {% extends 'core/base.html' %}
 
 {% load static %}
@@ -336,4 +337,4 @@
          <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   
          
-{% endblock content %}
+{% endblock content %} 
