--- a/ecomprj/templates/core/product_details.html
+++ b/ecomprj/templates/core/product_details.html
@@ -74,7 +74,7 @@
                             <!--// Product Details Left -->
                         </div>
                         <div class="col-lg-7 col-md-6">
-                            <div class="product-details-view-content sp-normal-content pt-60 ">
+                            <div class="product-details-view-content sp-normal-content pt-60">
                                 <div class="product-info">
                                     <h2> {{ product.model }}</h2> 
                                     <div class="offer-percent">
@@ -82,30 +82,35 @@
                                             <span class="offer">{{ product.offer }}% Off Now</span>
                                         {% endif %}
                                     </div>
-                                    <span class="product-details-ref">{{ product.color }}
-                                        Color</span>          
+                                    <span class="product-details-ref">{{ product.color }} Color</span>          
                                     <div class="rating-box pt-20">
                                         <ul class="rating rating-with-review-item">
-                                            <li><i class="fa fa-star-o"></i></li>
-                                            <li><i class="fa fa-star-o"></i></li>
-                                            <li><i class="fa fa-star-o"></i></li>
-                                            <li class="no-star"><i class="fa fa-star-o"></i></li>
-                                            <li class="no-star"><i class="fa fa-star-o"></i></li>
+                                            {% for _ in full_stars_range %}
+                                                <li><i class="fa fa-star"></i></li>
+                                            {% endfor %}
+                                            {% if half_star %}
+                                                <li><i class="fa fa-star-half-o"></i></li>
+                                            {% endif %}
+                                            {% for _ in empty_stars_range %}
+                                                <li><i class="fa fa-star-o"></i></li>
+                                            {% endfor %}
                                             {% if product.camera %}
-                                            <li class="review-item"><a href="#">Camera {{ product.camera }} MP </a></li>
+                                                <li class="review-item"><a href="#">Camera {{ product.camera }} MP</a></li>
                                             {% endif %}
                                         </ul>
                                     </div>
                                     <div class="price-box pt-20">
-                                        <span class="new-price new-price-2">₹ {{  discounted_price }}</span>
-                                        <span class="review-item">MRP ₹<del>{{ product.price }} </del></span>
+                                        <span class="new-price new-price-2">₹ {{ discounted_price }}</span>
+                                        <span class="review-item">MRP ₹<del>{{ product.price }}</del></span>
                                     </div>
                                     <div class="product-desc">
-                                        <p>description:
-                                            <span> {{product.description}}  </span>
-                                            
-                                        </p>
-                                       
+                                        <p>description: <span>{{ product.description }}</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        
 
                                          {%   if product.stock > 0 %}
                                                <label class="badge bg-succeess">In Stock</label>
@@ -237,125 +242,62 @@
                         <div id="reviews" class="tab-pane" role="tabpanel">
                             <div class="product-reviews">
                                 <div class="product-details-comment-block">
+                                    {% for review in reviews %}
                                     <div class="comment-review">
-                                        <span>Grade</span>
+                                        <span>Rating</span>
                                         <ul class="rating">
-                                            <li><i class="fa fa-star-o"></i></li>
-                                            <li><i class="fa fa-star-o"></i></li>
-                                            <li><i class="fa fa-star-o"></i></li>
-                                            <li class="no-star"><i class="fa fa-star-o"></i></li>
-                                            <li class="no-star"><i class="fa fa-star-o"></i></li>
+                                            {% for i in "12345" %}
+                                            <li class="{% if i <= review.rating %}no-star{% endif %}"><i class="fa fa-star-o"></i></li>
+                                            {% endfor %}
                                         </ul>
                                     </div>
                                     <div class="comment-author-infos pt-25">
-                                        <span>Aslam Nahas</span>
-                                        <em>Title: Awesome Smartphone Experience!
-
-                                            I recently got my hands on the latest smartphone from GadgetZone, and I must say, it's been a game-changer for me. 🚀
-                                            
-                                            Design and Build:
-                                            The sleek design and premium build quality immediately caught my eye. The phone feels great in my hand, and the attention to detail is impressive. 👌
-                                            
-                                            Performance:
-                                            Powered by the latest technology, this smartphone delivers smooth and speedy performance. Apps open quickly, and multitasking is a breeze. 🚀
-                                            
-                                            Camera Quality:
-                                            As a photography enthusiast, the camera on this device exceeded my expectations. The pictures are sharp, and the low-light performance is fantastic. 📸
-                                            
-                                            Battery Life:
-                                            No more worrying about running out of battery during the day. The long-lasting battery keeps up with my busy schedule without any hiccups. 🔋
-                                            
-                                            User Interface:
-                                            The user interface is intuitive and user-friendly, making it easy for someone like me, who's not a tech expert, to navigate through settings and apps effortlessly. 👍
-                                            
-                                            Overall Experience:
-                                            In conclusion, GadgetZone's smartphone offers a stellar overall experience. Whether you're a tech pro or just getting into smartphones, this device ticks all the boxes. Highly recommended! 🌟
-                                            
-                                            I hope you find this review format helpful! If you have any specific requirements or want more details, feel free to let me know. 😊</em>
+                                        <span>{{ review.user.username }}</span>
+                                        <em>{{ review.created_at }}</em>
                                     </div>
                                     <div class="comment-details">
-                                        <h4 class="title-block">Feedback</h4>
-                                        <p>Value for money</p>
+                                        <h4 class="title-block">{{ review.title }}</h4>
+                                        <p>{{ review.comment }}</p>
                                     </div>
-                                    <div class="review-btn">
-                                        <a class="review-links" href="#" data-toggle="modal" data-target="#mymodal">Write Your Review!</a>
-                                    </div>
-                                    <!-- Begin Quick View | Modal Area -->
-                                    <div class="modal fade modal-wrapper" id="mymodal" >
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-body">
-                                                    <h3 class="review-page-title">Write Your Review</h3>
-                                                    <div class="modal-inner-area row">
-                                                        <div class="col-lg-6">
-                                                           <div class="li-review-product">
-                                                               <img src="{% static 'main/images/product/large-size/3.jpg' %}" alt="Li's Product">
-                                                               <div class="li-review-product-desc">
-                                                                   <p class="li-product-name"> {{ i.model }}</p>
-                                                                   <p>
-                                                                       <span>Beach Camera Exclusive Bundle - Includes Two Samsung Radiant 360 R3 Wi-Fi Bluetooth Speakers. Fill The Entire Room With Exquisite Sound via Ring Radiator Technology. Stream And Control R3 Speakers Wirelessly With Your Smartphone. Sophisticated, Modern Design </span>
-                                                                   </p>
-                                                               </div>
-                                                           </div>
-                                                        </div>
-                                                        <div class="col-lg-6">
-                                                            <div class="li-review-content">
-                                                                <!-- Begin Feedback Area -->
-                                                                <div class="feedback-area">
-                                                                    <div class="feedback">
-                                                                        <h3 class="feedback-title">Our Feedback</h3>
-                                                                        <form action="#">
-                                                                            <p class="your-opinion">
-                                                                                <label>Your Rating</label>
-                                                                                <span>
-                                                                                    <select class="star-rating">
-                                                                                      <option value="1">1</option>
-                                                                                      <option value="2">2</option>
-                                                                                      <option value="3">3</option>
-                                                                                      <option value="4">4</option>
-                                                                                      <option value="5">5</option>
-                                                                                    </select>
-                                                                                </span>
-                                                                            </p>
-                                                                            <p class="feedback-form">
-                                                                                <label for="feedback">Your Review</label>
-                                                                                <textarea id="feedback" name="comment" cols="45" rows="8" aria-required="true"></textarea>
-                                                                            </p>
-                                                                            <div class="feedback-input">
-                                                                                <p class="feedback-form-author">
-                                                                                    <label for="author">Name<span class="required">*</span>
-                                                                                    </label>
-                                                                                    <input id="author" name="author" value="" size="30" aria-required="true" type="text">
-                                                                                </p>
-                                                                                <p class="feedback-form-author feedback-form-email">
-                                                                                    <label for="email">Email<span class="required">*</span>
-                                                                                    </label>
-                                                                                    <input id="email" name="email" value="" size="30" aria-required="true" type="text">
-                                                                                    <span class="required"><sub>*</sub> Required fields</span>
-                                                                                </p>
-                                                                                <div class="feedback-btn pb-15">
-                                                                                    <a href="#" class="close" data-dismiss="modal" aria-label="Close">Close</a>
-                                                                                    <a href="#">Submit</a>
-                                                                                </div>
-                                                                            </div>
-                                                                        </form>
-                                                                    </div>
-                                                                </div>
-                                                                <!-- Feedback Area End Here -->
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                    {% endfor %}
+                                    
+                                    {% comment %} <form action="#">
+                                        <p class="comment-form-title">Write a review</p>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <input type="text" name="user-name" placeholder="Your Name">
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <input type="text" name="user-email" placeholder="Your Email">
+                                            </div>
+                                            <div class="col-lg-12">
+                                                <div class="rating-form-style mb-20">
+                                                    <label>Your rating</label>
+                                                    <ul>
+                                                        <li><a href="#">1</a></li>
+                                                        <li><a href="#">2</a></li>
+                                                        <li><a href="#">3</a></li>
+                                                        <li><a href="#">4</a></li>
+                                                        <li><a href="#">5</a></li>
+                                                    </ul>
                                                 </div>
                                             </div>
+                                            <div class="col-lg-12">
+                                                <textarea name="user-comment" placeholder="Write a review"></textarea>
+                                                <button type="submit" class="customer-btn">Submit</button>
+                                            </div> {% endcomment %}
                                         </div>
-                                    </div>   
-                                    <!-- Quick View | Modal Area End Here -->
+                                    </form>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Product Details Tabs End -->
+
             <!-- Product Area End Here -->
             <!-- Begin Li's Laptop Product Area -->
             <section class="product-area li-laptop-product pt-30 pb-50">
@@ -369,7 +311,7 @@
                                     <span>Similar products</span>
                                 </h2>
                             </div>
-                            <div class="row">
+                        <div class="row">
                                 <div class="product-active owl-carousel">
                                     {% for i in similar_products|slice:":7" %}
                                     <div class="col-lg-12">
