amount calculations and invoice amount

--- a/ecomprj/templates/core/base.html
+++ b/ecomprj/templates/core/base.html
@@ -235,15 +235,17 @@
                                     <nav>
                                         <ul>
                                             <li class="dropdown-holder"><a href="{% url 'core:home' %}" style="color: white;">Home</a></li>
-                                            <li class="megamenu-holder"><a href="{% url 'core:products' %}" style="color: white;">Products</a></li>
-                                            <li class="dropdown-holder">
+                                            <li class="megamenu-holder"><a href="{% url 'core:products' %}" style="color: white;">Shop All</a></li>
+
+                                            {% comment %} <li class="dropdown-holder"> {% endcomment %}
                                                
-                                                <a href="{% url 'core:signupPage' %}" style="color: white;">Profile</a>
+                                                {% comment %} <a href="{% url 'core:products' %}" style="color: white;">Shop All</a> {% endcomment %}
                                                
-                                            </li>
+                                            {% comment %} </li> {% endcomment %}
                                             <li><a href="{% url 'core:user_categories' %}" style="color: white;">Categories</a></li>
+                                            <li class="megamenu-holder"><a href="{% url 'core:products' %}" style="color: white;">Products</a></li>
+
                                             {% comment %} <li><a href="{% url 'core:compose_message' %}" style="color: white;">Brands</a></li> {% endcomment %}
-                                         
                                                 <!-- Other links -->
                                                 {% comment %} <li><a href="{% url 'core:compose_message' %}">Compose Message</a></li>
                                                 <li><a href="{% url 'core:sent_messages' %}">Sent Messages</a></li> {% endcomment %}
