--- a/ecomprj/templates/core/customer_order.html
+++ b/ecomprj/templates/core/customer_order.html
@@ -86,7 +86,7 @@
         
                 {% endif %}
                 <td class="product-action">
-                    <a href="{% url 'core:order_details' order.id %}" class="btn btn-primary">Another Action</a>
+                    <a href="{% url 'core:order_details' order.id %}" class="btn btn-primary">Order Details</a>
                 </td>
             </td>
         </tr>
